# AI-agent-with-crewai-deepseek

./: .gitignore  README.md  init_project.py  main.py  pyproject.toml  requirements.txt
reports/: summary.md
scrape-wise/src/scrape-wise/: crew.py
scrape-wise/src/scrape-wise/config/: agents.yaml  tasks.yaml
tools/: pdf_reader.py
