[tool.poetry]
name = "scrape-wise"
version = "0.1.0"
description = ""
authors = ["Charlin Djioko"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = {extras = ["tools"], version = "^0.85.0"}
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
scrape-wise = "scrape-wise.main:run"
train = "scrape-wise.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
